# Distributed-Task-Queue

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.mypy_cache/3.12/: cache.0.db-shm  cache.0.db-wal  cache.1.db-shm  cache.1.db-wal  cache.10.db-shm  cache.10.db-wal  cache.11.db-shm  cache.11.db-wal  cache.12.db-shm  cache.12.db-wal  cache.13.db-shm  cache.13.db-wal  cache.14.db-shm  cache.14.db-wal  cache.15.db-shm  cache.15.db-wal  cache.2.db-shm  cache.2.db-wal  cache.3.db-shm  cache.3.db-wal  cache.4.db-shm  cache.4.db-wal  cache.5.db-shm  cache.5.db-wal  cache.6.db-shm  cache.6.db-wal  cache.7.db-shm  cache.7.db-wal  cache.8.db-shm  cache.8.db-wal  cache.9.db-shm  cache.9.db-wal
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: __init__.py  circuit_breakers.py  dlq.py  files.py  health.py  jobs.py  pipelines.py  progress.py  stats.py  workers.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py  file_storage.py
app/tasks/: __init__.py  celery_app.py  worker_tasks.py  workflows.py
app/utils/: circuit_breaker.py  dead_letter_queue.py  progress.py
tests/: test_api.py
